# Local-Notes

./: .gitignore  README.md  package-lock.json  pyproject.toml
local_notes/: cli.py  models.py  server.py  service.py
local_notes/agents/: qwen_agent_runner.py
local_notes/datasources/: __init__.py  apple_notes.py  base.py
local_notes/embed/: embeddings.py
local_notes/indexing/: cache.py  pipeline.py  whoosh_index.py
local_notes/llm/: providers.py
local_notes/storage/: conversations.py  sqlite.py
local_notes/utils/: dates.py  html.py
local_notes/web/: index.html  script.js  style.css
